--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
           working-directory: '/home/tcs/Documents/final/data/'
       - name: Store Data
         run: |
-          mv * /home/tcs/Documents/final/data/
+          mv .github/* /home/tcs/Documents/final/data/
           
       - name: Use Build Output
         run: |
