--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,10 +28,9 @@ jobs:
         id: build
         with:
           command: 'npm run build'
-          working-directory: '/home/tcs/Documents/final/data/'
       - name: Store Data
         run: |
-          mv .github/* /home/tcs/Documents/final/data/
+          mv .github/execution-data /home/tcs/Documents/final/data/
           
       - name: Use Build Output
         run: |
